# imc-prosperity4

./: .gitignore  README.md  datamodel.py  pyproject.toml
resources/: algorithm-implementation.md  game-mechanics.md  storyline.md  trading-glossary.md
strategy/round0/: main.py
strategy/round2/: main.py
strategy/round5/: main.py
tool/: backtester.py  extract_csv.py  runner.py
